--- a/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
+++ b/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
@@ -27,17 +27,17 @@ The Provider API is currently <<feature_lifecycle,incubating>>. Please be aware 
 
 ====
 
-First, Gradle provides lazy properties, which delay the calculation of a property’s value until it’s absolutely required. This provides two main benefits to build script and plugin authors:
+First, Gradle provides lazy properties, which delay the calculation of a property’s value until it’s absolutely required. Lazy types are faster, more understandable and better instrumented than the internal convention mapping mechanisms. This provides two main benefits to build script and plugin authors:
 
-1. Build authors can wire together Gradle models without worrying when a particular property’s value will be known.
-2. Build authors can avoid resource intensive work during the configuration phase, which can have a direct impact on maximum build performance.
+1. Build authors can wire together Gradle models without worrying when a particular property’s value will be known. For example, when you want to map properties in an extension to task properties but the values aren't known until the build script configures them.
+2. Build authors can avoid resource intensive work during the configuration phase, which can have a direct impact on maximum build performance. For example, when a property value comes from parsing a file.
 
 Gradle represents lazy properties with two interfaces:
 
 * api:org.gradle.api.provider.Provider[] are properties that can only be queried and cannot be changed.
 ** Properties with these types are read-only.
 ** The method api:org.gradle.api.provider.Provider#get()[] returns the current value of the property.
-** A `Provider` can be created by the factory method api:org.gradle.api.Project#provider(java.util.concurrent.Callable)[].
+** A `Provider` can be created by the factory method api:org.gradle.api.provider.ProviderFactory#provider(java.util.concurrent.Callable)[].
 * api:org.gradle.api.provider.Property[] are properties that can be queried and overwritten.
 ** Properties with these types are configurable.
 ** `Property` implements the `Provider` interface.
@@ -66,17 +66,13 @@ Note that Groovy Gradle DSL will generate setter methods for each `Property`-typ
 
 ====
 
-[[sec:why_new_types]]
-=== Why new types?
-The Provider API is a public implementation of a feature Gradle has had internally for a long time--convention mapping. Provider types are faster, more understandable and better instrumented than the internal convention mapping mechanisms. The Provider API also enables more consistent build logic since it allows a plugin or task to express the relationship between properties without worrying about when particular values are determined.
-
 [[sec:creating_property_provider]]
 === Creating a Property or Provider
 
 If provider types are not intended to be implemented directly by build script or plugin authors, how do you create new one? Gradle provides various factory APIs to create new instances of both api:org.gradle.api.provider.Provider[] and api:org.gradle.api.provider.Property[]:
 
-- api:org.gradle.api.provider.ProviderFactory#provider(java.util.concurrent.Callable)[] instantiates a new `Provider`. A handy method is available at api:org.gradle.api.Project#provider(java.util.concurrent.Callable)[]. If a api:org.gradle.api.Project[] instance isn’t available, you can inject api:org.gradle.api.provider.ProviderFactory[] through a constructor or method.
-- api:org.gradle.api.model.ObjectFactory#property(java.lang.Class)[] instantiates a new `Property`. An instance of the api:org.gradle.api.model.ObjectFactory[] can be referenced from api:org.gradle.api.Project#getObjects()[] or by injecting ObjectFactory through a constructor or method.
+- api:org.gradle.api.provider.ProviderFactory#provider(java.util.concurrent.Callable)[] instantiates a new `Provider`. An instance of the api:org.gradle.api.provider.ProviderFactory[] can be referenced from api:org.gradle.api.Project#getProviders()[] or by injecting `ProviderFactory` through a constructor or method.
+- api:org.gradle.api.model.ObjectFactory#property(java.lang.Class)[] instantiates a new `Property`. An instance of the api:org.gradle.api.model.ObjectFactory[] can be referenced from api:org.gradle.api.Project#getObjects()[] or by injecting `ObjectFactory` through a constructor or method.
 
 [NOTE]
 ====
@@ -135,7 +131,7 @@ To make this easier, Gradle offers convenient APIs for defining files or directo
 </sample>
 ++++
 
-In the example above, the task output and input are connected before any location is defined. This is possible because the input and output properties use the `Provider` API. The output property is created with api:org.gradle.api.DefaultTask#newOutputFile()[] and the input property is created with api:org.gradle.api.DefaultTask#newInputFile()[]. Values are only resolved when they are needed during execution. The setters can be called at any time before the task is executed and the change will automatically affect all related input and output properties.
+In the example above, the task outputs and inputs are connected before any location is defined. This is possible because the input and output properties use the `Provider` API. The output property is created with api:org.gradle.api.DefaultTask#newOutputFile()[] and the input property is created with api:org.gradle.api.DefaultTask#newInputFile()[]. Values are only resolved when they are needed during execution. The setters can be called at any time before the task is executed and the change will automatically affect all related input and output properties.
 
 Another thing to note is the absence of any explicit task dependency. Properties created via `newOutputFile()` and `newOutputDirectory()` bring knowledge about which task is generating them, so using them as task input will implicitly link tasks together.
 
@@ -160,25 +156,23 @@ Just like every `Provider`, the list is evaluated when api:org.gradle.api.provid
 ++++
 
 [[sec:lazy_configuration_faqs]]
-=== FAQs
-* Should I expose the api:org.gradle.api.provider.Property[] directly?
-** Yes. For configurable properties (subtypes of api:org.gradle.api.provider.Property[]), there should be a single getter that returns the api:org.gradle.api.provider.Property[]. For non-configurable properties, there should be a single getter that returns a api:org.gradle.api.provider.Provider[].
-* Should I encapsulate the api:org.gradle.api.provider.Property[] behind setter/getter?
-** No. The api:org.gradle.api.provider.Property[] and api:org.gradle.api.provider.Provider[] types have all of the overloads you need to query or configure a value.
-* How can I simplify calls like `obj.getProperty().get()` and `obj.getProperty().set(T)`?
-** You don’t. This makes it very explicit when a property's value is resolved. Generally, you only call api:org.gradle.api.provider.Provider#get()[] in a task action. In most cases, you pass around lazy representations instead.
-* How will the Provider API affect new and existing Gradle tasks?
-** The Provider API will be used for new properties going forward. The Groovy Gradle DSL adds convenience methods to make the use of Providers mostly transparent in build scripts.
-** Existing tasks will have their existing "raw" properties replaced by Providers as needed and in a backwards compatible way.
-** New tasks will be designed with the Provider API.
-* How should I migrate my plugin to use providers?
+=== Guidelines
+
+This section will introduce guidelines to be successful with the Provider API. To see those guidelines in action, have a look at https://github.com/gradle-guides/gradle-site-plugin[gradle-site-plugin], a Gradle plugin demonstrating established techniques and practices for plugin development.
+
+* The api:org.gradle.api.provider.Property[] and api:org.gradle.api.provider.Provider[] types have all of the overloads you need to query or configure a value. For this reason, you should follow the following guidelines:
+** For configurable properties, expose the api:org.gradle.api.provider.Property[] directly through a single getter.
+** For non-configurable properties, expose an api:org.gradle.api.provider.Provider[] directly through a single getter.
+* Avoid simplifying calls like `obj.getProperty().get()` and `obj.getProperty().set(T)` in your code by introducing additional getters and setters.
+* When migrating your plugin to use providers, follow these guidelines:
 ** If it's a new property, expose it as a api:org.gradle.api.provider.Property[] or api:org.gradle.api.provider.Provider[] using a single getter.
 ** If it's incubating, change it to use a api:org.gradle.api.provider.Property[] or api:org.gradle.api.provider.Provider[] using a single getter.
 ** If it's a stable property, add a new api:org.gradle.api.provider.Property[] or api:org.gradle.api.provider.Provider[] and deprecate the old one. You should wire the old getter/setters into the new property as appropriate.
 
-
 [[sec:lazy_configuration_roadmap]]
 === Future development
+
+Going forward, new properties will use the Provider API. The Groovy Gradle DSL adds convenience methods to make the use of Providers mostly transparent in build scripts. Existing tasks will have their existing "raw" properties replaced by Providers as needed and in a backwards compatible way. New tasks will be designed with the Provider API.
 
 The Provider API is <<feature_lifecycle,incubating>>. Please create new issues at https://github.com/gradle/gradle/issues/new[gradle/gradle] to report bugs or to submit use cases for new features.
 
@@ -234,7 +228,6 @@ The Provider API is <<feature_lifecycle,incubating>>. Please create new issues a
 |Any other type
 |api:org.gradle.api.provider.Provider[]<T>
 |api:org.gradle.api.provider.Property[]<T>
-| * api:org.gradle.api.Project#provider(java.util.concurrent.Callable)[]
-* api:org.gradle.api.model.ObjectFactory#property(java.lang.Class)[]
+| * api:org.gradle.api.model.ObjectFactory#property(java.lang.Class)[]
 
 |=========================================================
