--- a/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
+++ b/subprojects/docs/src/docs/userguide/lazyConfiguration.adoc
@@ -27,7 +27,7 @@ The Provider API is currently <<feature_lifecycle,incubating>>. Please be aware 
 
 ====
 
-First, Gradle provides lazy properties, which delay the calculation of a property’s value until it’s absolutely required. Lazy types are faster, more understandable and better instrumented than the internal convention mapping mechanisms. This provides two main benefits to build script and plugin authors:
+Gradle provides lazy properties, which delay the calculation of a property’s value until it’s absolutely required. Lazy types are faster, more understandable and better instrumented than the internal convention mapping mechanisms. This provides two main benefits to build script and plugin authors:
 
 1. Build authors can wire together Gradle models without worrying when a particular property’s value will be known. For example, when you want to map properties in an extension to task properties but the values aren't known until the build script configures them.
 2. Build authors can avoid resource intensive work during the configuration phase, which can have a direct impact on maximum build performance. For example, when a property value comes from parsing a file.
@@ -69,7 +69,7 @@ Note that Groovy Gradle DSL will generate setter methods for each `Property`-typ
 [[sec:creating_property_provider]]
 === Creating a Property or Provider
 
-If provider types are not intended to be implemented directly by build script or plugin authors, how do you create new one? Gradle provides various factory APIs to create new instances of both api:org.gradle.api.provider.Provider[] and api:org.gradle.api.provider.Property[]:
+If provider types are not intended to be implemented directly by build script or plugin authors, how do you create a new one? Gradle provides various factory APIs to create new instances of both api:org.gradle.api.provider.Provider[] and api:org.gradle.api.provider.Property[]:
 
 - api:org.gradle.api.provider.ProviderFactory#provider(java.util.concurrent.Callable)[] instantiates a new `Provider`. An instance of the api:org.gradle.api.provider.ProviderFactory[] can be referenced from api:org.gradle.api.Project#getProviders()[] or by injecting `ProviderFactory` through a constructor or method.
 - api:org.gradle.api.model.ObjectFactory#property(java.lang.Class)[] instantiates a new `Property`. An instance of the api:org.gradle.api.model.ObjectFactory[] can be referenced from api:org.gradle.api.Project#getObjects()[] or by injecting `ObjectFactory` through a constructor or method.
