--- a/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
+++ b/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
@@ -33,7 +33,7 @@ The following sections explain each of these use cases in more detail.
 [[sec:project_wrapper_enabled]]
 === Is my project Wrapper-enabled?
 
-How do you know that a project already uses the Wrapper? The Wrapper consists of a set of files checked into version control together with your project source code. To illustrate the expected Wrapper files let’s have a look at the following project layout:
+How do you know that a project already uses the Wrapper? The Wrapper consists of a set of files checked into version control together with your project source code. Let’s have a look at the following project layout to illustrate the expected Wrapper files:
 
 ----
 .
@@ -47,7 +47,7 @@ How do you know that a project already uses the Wrapper? The Wrapper consists of
 └── gradlew.bat
 ----
 
-You can find a new `gradle` directory and two script files alongside the typical `build.gradle` and `settings.gradle` file:
+A Gradle project typically provides a `build.gradle` and a `settings.gradle` file. The Wrapper files live alongside in the `gradle` directory and the root directory of the project. The following table explains their purpose.
 
 .Generated Wrapper files
 [options="header"]
@@ -58,29 +58,38 @@ You can find a new `gradle` directory and two script files alongside the typical
 |`gradlew`, `gradlew.bat`    | A shell script and a Windows batch script for executing the build with the Wrapper.
 |===
 
-If you happen to find those files in your project then you are all set. You can go ahead and <<sec:executing_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to generate them.
+If you happen to find those files in your project then you are all set. You can go ahead and <<sec:executing_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to <<sec:adding_wrapper,generate them>>.
 
 [[sec:adding_wrapper]]
 === Adding a Wrapper to a project
 
 Generating the Wrapper files requires an installed version of the Gradle runtime on your machine as described in <<installation>>. Thankfully, generating the initial Wrapper files is a one-time process.
 
-Every vanilla Gradle build comes with a built-in task called `wrapper`. You’ll be able to find the task listed under the group "Build Setup tasks" when running the command `gradle tasks`. Executing the `wrapper` task generates the necessary Wrapper files in the project directory.
+Every vanilla Gradle build comes with a built-in task called `wrapper`. You’ll be able to find the task listed under the group "Build Setup tasks" when <<sec:listing_tasks,listing the tasks>>. Executing the `wrapper` task generates the necessary Wrapper files in the project directory.
 
-++++
-<sample id="wrapperCommandLine" dir="userguide/wrapper/simple" title="Running the Wrapper task">
-    <output args="wrapper"/>
-</sample>
-++++
+.Running the Wrapper task
+====
+[source,shell]
+----
+> gradle wrapper
+:wrapper
 
-IMPORTANT: To make the Wrapper files available to other developers and execution environments you’ll need to check them into version control. Adding the JAR file to version control is expected. Some organization do not allow projects to submit binary files to version control. At the moment there are no alternative options to the approach.
+BUILD SUCCESSFUL in 0s
+1 actionable task: 1 executed
+----
+====
+
+[NOTE]
+====
+_Important:_ To make the Wrapper files available to other developers and execution environments you’ll need to check them into version control. Adding the JAR file to version control is expected. Some organizations do not allow projects to submit binary files to version control. At the moment there are no alternative options to the approach.
+====
 
 The generated Wrapper properties file, `gradle/wrapper/gradle-wrapper.properties`, encodes important information about the Gradle distribution.
 
 .The generated distribution URL
 ====
 [source,properties]
-.`gradle-wrapper.properties`
+.`gradle/wrapper/gradle-wrapper.properties`
 ----
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.3.1-bin.zip
 ----
@@ -101,20 +110,26 @@ All of those aspects are configurable at the time of generating the Wrapper file
 |`--gradle-distribution-url` |The full URL pointing to Gradle distribution ZIP file. Using this option makes `--gradle-version` and `--distribution-type` obsolete as the URL already contains this information. This option is extremely valuable if you want to host the Gradle distribution inside your company’s network.
 |===
 
-To illustrate the use of the command line options let’s assume the following use case. You would like to generate the Wrapper with version 4.0 and use the `-all` distribution to enable your IDE to enable code-completion and being able to navigate to the Gradle source code. Those requirements are captured by the following command line execution:
+Let’s assume the following use case to illustrate the use of the command line options. You would like to generate the Wrapper with version 4.0 and use the `-all` distribution to enable your IDE to enable code-completion and being able to navigate to the Gradle source code. Those requirements are captured by the following command line execution:
 
-++++
-<sample id="wrapperCommandLine" dir="userguide/wrapper/simple" title="Providing options to Wrapper task">
-    <output args="wrapper --gradle-version 4.0 --distribution-type all"/>
-</sample>
-++++
+.Providing options to Wrapper task
+====
+[source,shell]
+----
+> gradle wrapper --gradle-version 4.0 --distribution-type all
+:wrapper
+
+BUILD SUCCESSFUL in 0s
+1 actionable task: 1 executed
+----
+====
 
 As a result you can find the desired information in the Wrapper properties file.
 
 .The generated distribution URL
 ====
 [source,properties]
-.`gradle-wrapper.properties`
+.`gradle/wrapper/gradle-wrapper.properties`
 ----
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-all.zip
 ----
@@ -146,7 +161,7 @@ In case the Gradle distribution is not available on the machine, the Wrapper wil
 [[sec:upgrading_wrapper]]
 === Upgrading an existing Wrapper
 
-Long-running projects will want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in section <<sec:adding_wrapper,“Adding a Wrapper to a project”>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
+Long-running projects will want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in <<sec:adding_wrapper>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
 
 The following console outputs demonstrate the Wrapper upgrade process from Gradle version 4.0 to 4.2.1.
 
@@ -189,8 +204,8 @@ BUILD SUCCESSFUL in 4s
 ./gradlew -v
 Downloading https://services.gradle.org/distributions/gradle-4.2.1-bin.zip
 ...................................................................
-Unzipping /Users/bmuschko/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju/gradle-4.2.1-bin.zip to /Users/bmuschko/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju
-Set executable permissions for: /Users/bmuschko/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju/gradle-4.2.1/bin/gradle
+Unzipping /Users/claudia/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju/gradle-4.2.1-bin.zip to /Users/claudia/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju
+Set executable permissions for: /Users/claudia/.gradle/wrapper/dists/gradle-4.2.1-bin/dajvke9o8kmaxbu0kc5gcgeju/gradle-4.2.1/bin/gradle
 
 ------------------------------------------------------------
 Gradle 4.2.1
@@ -224,7 +239,7 @@ With the configuration in place running `./gradlew wrapper --gradle-version 4.1`
 .The generated distribution URL
 ====
 [source,properties]
-.`gradle-wrapper.properties`
+.`gradle/wrapper/gradle-wrapper.properties`
 ----
 distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
 ----
@@ -233,15 +248,12 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-4.1-all.zip
 Please check out the API documentation for more detail descriptions of the available configuration options. You can also find various samples for configuring the Wrapper in the Gradle distribution.
 
 [[sec:authenticated_download]]
-=== Authenticated Gradle distribution download
-
+==== Authenticated Gradle distribution download
 
 [TIP]
 .Security Warning
 ====
-
 HTTP Basic Authentication should only be used with `HTTPS` URLs and not plain `HTTP` ones. With Basic Authentication, the user credentials are sent in clear text.
-
 ====
 
 The Gradle `Wrapper` can download Gradle distributions from servers using HTTP Basic Authentication. This enables you to host the Gradle distribution on a private protected server. You can specify a username and password in two different ways depending on your use case: as system properties or directly embedded in the `distributionUrl`. Credentials in system properties take precedence over the ones embedded in `distributionUrl`.
@@ -254,10 +266,8 @@ Using system properties can be done in the `.gradle/gradle.properties` file in t
 [source,properties]
 .`gradle.properties`
 ----
-
- systemProp.gradle.wrapperUser=username
- systemProp.gradle.wrapperPassword=password
-
+systemProp.gradle.wrapperUser=username
+systemProp.gradle.wrapperPassword=password
 ----
 ====
 
@@ -267,24 +277,22 @@ Embedding credentials in the `distributionUrl` in the `gradle/wrapper/gradle-wra
 ====
 
 [source,properties]
-.`gradle-wrapper.properties`
+.`gradle/wrapper/gradle-wrapper.properties`
 ----
-
- distributionUrl=https://username:password@somehost/path/to/gradle-distribution.zip
-
+distributionUrl=https://username:password@somehost/path/to/gradle-distribution.zip
 ----
 ====
 
 This can be used in conjunction with a proxy, authenticated or not. See <<sec:accessing_the_web_via_a_proxy>> for more information on how to configure the `Wrapper` to use a proxy.
 
 [[sec:verification]]
-=== Verification of downloaded Gradle distributions
+==== Verification of downloaded Gradle distributions
 
 The Gradle Wrapper allows for verification of the downloaded Gradle distribution via SHA-256 hash sum comparison. This increases security against targeted attacks by preventing a man-in-the-middle attacker from tampering with the downloaded Gradle distribution.
 
 To enable this feature, download the `.sha256` file associated with the Gradle distribution you want to verify.
 
-==== Downloading the SHA-256 file
+===== Downloading the SHA-256 file
 
 You can download the `.sha256` file by clicking on one of the `sha256` links on whichever page you used to download your distribution:
 
@@ -293,18 +301,47 @@ You can download the `.sha256` file by clicking on one of the `sha256` links on 
 * https://gradle.org/release-candidate
 * https://gradle.org/nightly
 
++++++
+<figure xmlns:xi="http://www.w3.org/2001/XInclude">
+    <title>The SHA-256 link on the installation page</title>
+    <imageobject>
+        <imagedata fileref="img/sha256-link-installation-page.png" width="200mm"/>
+    </imageobject>
+</figure>
++++++
+
 The format of the file is a single line of text that is the SHA-256 hash of the corresponding zip file.
+
+===== Configuring checksum verification
 
 Add the downloaded hash sum to the `gradle-wrapper.properties` using the `distributionSha256Sum` property.
 
 .Configuring SHA-256 checksum verification
 ====
-
 [source,properties]
-.`gradle-wrapper.properties`
+.`gradle/wrapper/gradle-wrapper.properties`
 ----
-
 distributionSha256Sum=371cb9fbebbe9880d147f59bab36d61eee122854ef8c9ee1ecf12b82368bcf10
+----
+====
 
+Gradle will report a build failure in case the configured checksum does not match the checksum found on the server for hosting the distribution. Checksum Verification is only performed if the configured Wrapper distribution hasn't been downloaded yet.
+
+.Checksum verification failure
+====
+[source,shell]
+----
+$ ./gradlew help
+Downloading https://services.gradle.org/distributions/gradle-4.3.1-bin.zip
+.....................................................................
+Verification of Gradle distribution failed!
+
+Your Gradle distribution may have been tampered with.
+Confirm that the 'distributionSha256Sum' property in your gradle-wrapper.properties file is correct and you are downloading the wrapper from a trusted source.
+
+ Distribution Url: https://services.gradle.org/distributions/gradle-4.3.1-bin.zip
+Download Location: /Users/claudia/.gradle/wrapper/dists/gradle-4.3.1-bin/7yzdu24db77gi3zukl2a7o0xx/gradle-4.3.1-bin.zip
+Expected checksum: 'abc123'
+  Actual checksum: '15ebe098ce0392a2d06d252bff24143cc88c4e963346582c8d88814758d93ac7'
 ----
 ====
