Samples can be ignored that shouldn't be tested with Gradle

--- a/subprojects/docs/src/docs/userguide/potentialTraps.adoc
+++ b/subprojects/docs/src/docs/userguide/potentialTraps.adoc
@@ -23,7 +23,7 @@
 For Gradle users it is important to understand how Groovy deals with script variables. Groovy has two types of script variables. One with a local scope and one with a script-wide scope.
 
 ++++
-<sample xmlns:xi="http://www.w3.org/2001/XInclude" id="scope" dir="userguide/tutorial" title="Variables scope: local and script wide">
+<sample xmlns:xi="http://www.w3.org/2001/XInclude" id="scope" dir="userguide/tutorial/groovyScope" title="Variables scope: local and script wide">
             <sourcefile file="scope.groovy"/>
             <output executable="groovy" args="scope.groovy" />
         </sample>
