--- a/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
+++ b/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
@@ -113,10 +113,11 @@ All of those aspects are configurable at the time of generating the Wrapper file
 .Wrapper command line options
 [options="header"]
 |===
-|Command Line Option         |Description
-|`--gradle-version`          | The Gradle version used for downloading and executing the Wrapper.
-|`--distribution-type`       |The Gradle distribution type used for the Wrapper. Available options are `bin` and `all`. The default value is `bin`.
-|`--gradle-distribution-url` |The full URL pointing to Gradle distribution ZIP file. Using this option makes `--gradle-version` and `--distribution-type` obsolete as the URL already contains this information. This option is extremely valuable if you want to host the Gradle distribution inside your company’s network.
+|Command Line Option                |Description
+|`--gradle-version`                 | The Gradle version used for downloading and executing the Wrapper.
+|`--distribution-type`              |The Gradle distribution type used for the Wrapper. Available options are `bin` and `all`. The default value is `bin`.
+|`--gradle-distribution-url`        |The full URL pointing to Gradle distribution ZIP file. Using this option makes `--gradle-version` and `--distribution-type` obsolete as the URL already contains this information. This option is extremely valuable if you want to host the Gradle distribution inside your company’s network.
+|`--gradle-distribution-sha256-sum` |The SHA256 hash sum used for <<sec:verification,verifying the downloaded Gradle distribution>>.
 |===
 
 Let’s assume the following use case to illustrate the use of the command line options. You would like to generate the Wrapper with version 4.0 and use the `-all` distribution to enable your IDE to enable code-completion and being able to navigate to the Gradle source code. Those requirements are captured by the following command line execution:
