--- a/subprojects/docs/src/docs/userguide/wrapper.adoc
+++ b/subprojects/docs/src/docs/userguide/wrapper.adoc
@@ -33,14 +33,14 @@ The recommended way to execute any Gradle build is with the help of the Gradle W
 
 **So how does it work? For a user there are typically three different workflows:**
 
-- You set up a new Gradle project and want to <<sec:add_wrapper,add the Wrapper>> to it.
-- You want to <<sec:use_wrapper,run a project with the Wrapper>> that already provides it.
-- You want to <<sec:upgrade_wrapper,upgrade the Wrapper>> to a new version of Gradle.
+- You set up a new Gradle project and want to <<sec:adding_wrapper,add the Wrapper>> to it.
+- You want to <<sec:using_wrapper,run a project with the Wrapper>> that already provides it.
+- You want to <<sec:upgrading_wrapper,upgrade the Wrapper>> to a new version of Gradle.
 
 The following sections explain each of these use cases in more detail.
 
-[[sec:add_wrapper]]
-=== Add Gradle Wrapper
+[[sec:adding_wrapper]]
+=== Adding the Gradle Wrapper
 
 Generating the Wrapper files requires an installed version of the Gradle runtime on your machine as described in <<installation>>. Thankfully, generating the initial Wrapper files is a one-time process.
 
@@ -128,10 +128,10 @@ A Gradle project typically provides a `build.gradle` and a `settings.gradle` fil
 |`gradlew`, `gradlew.bat`    | A shell script and a Windows batch script for executing the build with the Wrapper.
 |===
 
-You can go ahead and <<sec:use_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to <<sec:add_wrapper,generate them>>.
+You can go ahead and <<sec:using_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to <<sec:adding_wrapper,generate them>>.
 
-[[sec:use_wrapper]]
-=== Use Gradle Wrapper
+[[sec:using_wrapper]]
+=== Using the Gradle Wrapper
 
 It is recommended to always execute a build with the Wrapper to ensure a reliable, controlled and standardized execution of the build. Using the Wrapper looks almost exactly like running the build with a Gradle installation. Depending on the operation system you either run `gradlew` or `gradlew.bat` instead of the `gradle` command. The following console output demonstrate the use of the Wrapper on a Windows machine for a Java-based project.
 
@@ -148,10 +148,10 @@ In case the Gradle distribution is not available on the machine, the Wrapper wil
 The Wrapper shell script and batch file reside in the root directory of a single or multi-project Gradle build. You will need to reference the correct path to those files in case you want to execute the build from a subproject directory e.g. `../../gradlew tasks`.
 ====
 
-[[sec:upgrade_wrapper]]
-=== Upgrade Gradle Wrapper
+[[sec:upgrading_wrapper]]
+=== Upgrading the Gradle Wrapper
 
-Projects will typically want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in <<sec:add_wrapper>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
+Projects will typically want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in <<sec:adding_wrapper>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
 
 Use the Gradle `wrapper` task to generate the wrapper, specifying a version. The default is the current version, which you can check by executing `./gradlew --version`.
 
@@ -167,8 +167,8 @@ Use the Gradle `wrapper` task to generate the wrapper, specifying a version. The
 </sample>
 ++++
 
-[[customize_wrapper]]
-=== Customize Gradle Wrapper
+[[customizing_wrapper]]
+=== Customizing the Gradle Wrapper
 
 Most users of Gradle are happy with the default runtime behavior of the Wrapper. However, organizational policies, security constraints or personal preferences might require you to dive deeper into customizing the Wrapper. Thankfully, the built-in `wrapper` task exposes numerous options to bend the runtime behavior to your needs. Most configuration options are exposed by the underlying task type api:org.gradle.api.tasks.wrapper.Wrapper[].
 
